--- a/goods-server/src/main/resources/application.yml
+++ b/goods-server/src/main/resources/application.yml
@@ -7,6 +7,11 @@ server:
   #  此项目端口号
   port: 8889
 spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/shoping?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+    username: root
+    password: 123
+    driver-class-name: com.mysql.cj.jdbc.Driver
   application:
     #    注册进eureka的名字
     name: goods-server
