--- a/goods-server/pom.xml
+++ b/goods-server/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.brady</groupId>
+            <artifactId>goods-api</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -42,7 +48,7 @@
                     <overwrite>true</overwrite>
                     <verbose>true</verbose>
                 </configuration>
-                <!--<dependencies>
+                <dependencies>
                     <dependency>
                         <groupId>mysql</groupId>
                         <artifactId>mysql-connector-java</artifactId>
@@ -54,7 +60,7 @@
                         <artifactId>mybatis</artifactId>
                         <version>3.4.6</version>
                     </dependency>
-                </dependencies>-->
+                </dependencies>
             </plugin>
         </plugins>
     </build>
