--- a/goods-server/src/main/resources/application.yml
+++ b/goods-server/src/main/resources/application.yml
@@ -2,6 +2,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8888/eureka/
+  instance:
+    instance-id: goods-service #自定义服务名称信息
+    status-page-url: http://localhost:${server.port}/swagger-ui.html # ${server.port}为该服务的端口号
 server:
   port: 8889
 spring:
