--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>lombok-maven-plugin</artifactId>
             <version>1.18.4.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
