--- a/goods-server/src/main/resources/application.yml
+++ b/goods-server/src/main/resources/application.yml
@@ -14,11 +14,8 @@ spring:
     password: 123
     driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
-    # Redis数据库索引
-    database: 0
-    host: 192.168.67.101
-    port: 6379
-    password: 123456
+    cluster:
+      nodes: 192.168.67.101:7001,192.168.67.101:7002,192.168.67.101:7003,192.168.67.101:7004,192.168.67.101:7005,192.168.67.101:7006
   application:
     name: goods-server
 mybatis:
